<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/fondo_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/sqlite_titulo"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/azul_principal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sqlite_id"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etIdEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sqlite_hint_id"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sqlite_nombre"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNombreEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sqlite_hint_nombre"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sqlite_carrera"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCarreraEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sqlite_hint_carrera" />

        <Button
            android:id="@+id/btnInsertarEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/sqlite_insertar" />

        <Button
            android:id="@+id/btnConsultarEstudiantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sqlite_consultar" />

        <Button
            android:id="@+id/btnActualizarEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sqlite_actualizar" />

        <Button
            android:id="@+id/btnEliminarEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sqlite_eliminar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sqlite_registros"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/azul_principal" />

        <TextView
            android:id="@+id/tvListaEstudiantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="No existen registros"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>