<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/fondo_app">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/geo_titulo"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/azul_principal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/geo_descripcion"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textColor="@color/texto_secundario" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/geo_latitud"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/texto_principal" />

    <EditText
        android:id="@+id/etLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/geo_hint_latitud"
        android:inputType="numberDecimal|numberSigned" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/geo_longitud"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/texto_principal" />

    <EditText
        android:id="@+id/etLongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/geo_hint_longitud"
        android:inputType="numberDecimal|numberSigned" />

    <Button
        android:id="@+id/btnMostrarCoordenadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/geo_mostrar" />

    <Button
        android:id="@+id/btnAbrirMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/geo_abrir_mapa" />

    <TextView
        android:id="@+id/tvResultadoGeo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/geo_resultado_inicial"
        android:textSize="17sp"
        android:textAlignment="center"
        android:textColor="@color/texto_secundario" />

</LinearLayout>