<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@color/fondo_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/config_titulo"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/azul_principal" />

        <Switch
            android:id="@+id/swNotificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/config_notificaciones"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/swSincronizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/config_sincronizacion"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/swModoOscuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/config_modo_oscuro"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/config_tamano_texto"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/texto_principal" />

        <RadioGroup
            android:id="@+id/rgTamanoTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rbPequeno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_pequeno" />

            <RadioButton
                android:id="@+id/rbNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_normal" />

            <RadioButton
                android:id="@+id/rbGrande"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_grande" />

        </RadioGroup>

        <Button
            android:id="@+id/btnRestaurar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/config_restaurar" />

        <TextView
            android:id="@+id/tvEstadoConfiguracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/config_estado"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/texto_secundario" />

    </LinearLayout>

</ScrollView>