<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:id="@+id/main"
    android:background="@color/fondo_app">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_intents"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/azul_principal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/subtitulo_intents"
        android:textSize="18sp"
        android:textColor="@color/texto_secundario"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnPerfil"
        android:layout_marginTop="35dp"
        android:text="@string/ver_perfil" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnWeb"
        android:layout_marginTop="35dp"
        android:text="@string/abrir_web" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnLlamar"
        android:layout_marginTop="35dp"
        android:text="@string/llamar" />

</LinearLayout>